minimum size of message box in contact form fixed to a minimim size, probably will need to see whether it's too big on mobile. Also, name of the page changed from default, to a more personalised one.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1915,6 +1915,9 @@ input, select, textarea {
 
 	textarea {
 		padding: 0.75em 1em;
+		min-height: 10em;
+		height: 10em;
+		height: 10em;
 	}
 
 	input[type="checkbox"],
